--- a/frontend/src/components/SwipeComponent.css
+++ b/frontend/src/components/SwipeComponent.css
@@ -2,12 +2,17 @@
 
 .swipe-component {
   display: flex;
-  flex-direction: column;
+  flex-flow: row wrap;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  padding: 10rem 0;
+  gap: 1rem;
+  /*height: 100vh;*/
 }
 
+
+
+/*---XXX-----*/
 .movie-card {
   position: relative;
   width: 300px;
