--- a/frontend/src/components/FilmCard.css
+++ b/frontend/src/components/FilmCard.css
@@ -23,8 +23,13 @@ img.filmposter {
     justify-content: space-evenly;
 }
 
-.film-card .film-infos h2,p {
+.film-infos h2{
+    font-weight: 800;
+}
+.film-infos p {
+    margin: 0;
+}
+.film-card .film-infos h2 {
     font-size: 1.2rem;
     margin: 0;
-    color: #171515;
 }
