--- a/frontend/src/components/FilmCard.css
+++ b/frontend/src/components/FilmCard.css
@@ -1,10 +1,14 @@
 .film-card {
-    max-width: 350px;
+    /*max-width: 350px;*/
     position: relative;
     overflow: hidden;
     border-radius: 15px;
 }
-
+@media screen and (min-width: 900px) {
+    .film-card {
+     max-width: 350px;
+    }
+}
 
 img.filmposter {
     width: 100%;
@@ -25,6 +29,7 @@ img.filmposter {
 
 .film-infos h2{
     font-weight: 800;
+    text-align: center;
 }
 .film-infos p {
     margin: 0;
