--- a/frontend/src/components/SwipeComponent.css
+++ b/frontend/src/components/SwipeComponent.css
@@ -1,16 +1,40 @@
 /* src/components/SwipeComponent.css */
 
+.swipe-page{
+  padding: 10rem 1rem;
+  max-width: 1920px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 750px) {
+.swipe-page {
+    padding: 10rem 2.5rem;
+}
+}
+
 .swipe-component {
-  display: flex;
+  /* display: flex;
   flex-flow: row wrap;
   align-items: center;
-  justify-content: center;
-  padding: 10rem 0;
+  justify-content: center; */
   gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   /*height: 100vh;*/
 }
 
-
+.swipe-thumbs{
+  margin: 2rem 0;
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (min-width: 750px) {
+  .swipe-thumbs {
+    justify-content: space-around;
+  }
+}
+.swipe-thumbs span{
+  font-size: 3rem;
+}
 
 /*---XXX-----*/
 .movie-card {
