--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -74,4 +74,24 @@ p {
   display: none;
 }
 
+footer {
+  height: 65px;
+  background: #e05a47;
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  border-radius: 30px 30px 0 0;
+}
+@media screen and (min-width: 900px) {
+  footer {
+    display: none;
+  }
+}
+footer div {
+  padding: 25px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
 /*# sourceMappingURL=styles.css.map */
