--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -8,6 +8,7 @@ $dark: #171515;
 $light: #f3f5f9;
 
 $red: #e76f51;
+$darkred: #e05a47;
 
 html,
 body {
@@ -73,4 +74,23 @@ p {
 }
 #intro.fadeOut {
   display: none;
+}
+
+//FOOTER
+footer {
+  height: 65px;
+  background: $darkred;
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  border-radius: 30px 30px 0 0;
+  @media screen and (min-width: 900px) {
+    display: none;
+  }
+  div {
+    padding: 25px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
