--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -14,6 +14,10 @@ body {
   background-color: #171515;
 }
 
+body.no-scroll {
+  overflow-y: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -81,6 +85,7 @@ footer {
   bottom: 0;
   width: 100vw;
   border-radius: 30px 30px 0 0;
+  z-index: 101;
 }
 @media screen and (min-width: 900px) {
   footer {
