--- a/frontend/src/components/FilmCard.css
+++ b/frontend/src/components/FilmCard.css
@@ -4,10 +4,21 @@
 }
 .film-card {
     /*max-width: 350px;*/
-    position: relative;
+    /* position: relative;
     overflow: hidden;
     border-radius: 15px;
-    pointer-events: all;
+    pointer-events: all; */
+    position: absolute;
+    width: 300px;
+    height: 450px;
+    border-radius: 15px;
+    /*display: flex;*/
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+     user-select: none;
+    cursor: grab;
+    transition: transform 0.2s ease, opacity 0.5s ease;
 }
 @media screen and (min-width: 900px) {
     .film-card {
@@ -15,9 +26,14 @@
     }
 }
 
-img.filmposter {
+.filmposter {
     width: 100%;
-    display: block;
+    display: block; 
+    height: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    /* user-drag: none;
+     pointer-events: none; */
 }
 
 .film-card .film-infos {
@@ -30,6 +46,7 @@ img.filmposter {
     flex-flow: column;
     align-items: center;
     justify-content: space-evenly;
+    border-radius: 0 0 15px 15px;
 }
 
 .film-infos h2{
