--- a/frontend/src/components/SwipeComponent.css
+++ b/frontend/src/components/SwipeComponent.css
@@ -4,6 +4,7 @@
   padding: 6rem 1.5rem;
   max-width: 1920px;
   margin: 0 auto;
+  position: relative;
 }
 @media screen and (min-width: 750px) {
 .swipe-page {
@@ -12,18 +13,20 @@
 }
 
 .swipe-component {
-  /* display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: center; */
-  gap: 1rem;
+  /* gap: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  /*height: 100vh;*/
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+      /* height: 100vh; */
+      /*align-items: center;*/
 }
 
 .swipe-thumbs{
-  margin: 2rem 0;
+  margin: 1rem 0;
+  /* margin-bottom: 4rem; */
   display: flex;
   justify-content: space-between;
 }
