--- a/frontend/src/components/Details.css
+++ b/frontend/src/components/Details.css
@@ -41,6 +41,21 @@
     padding: 0 1rem;
 } */
 
+.modal-details-video-container{
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio (56.25% is 9/16) */
+    height: 0;
+    overflow: hidden;
+}
+.modal-details-video{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 .modal-details-img {
     max-height: 200px;
     width: 100%;
@@ -48,10 +63,16 @@
     display: block;
     margin: 2rem auto;
 }
+.genres{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1.5rem;
+}
 .modal-details-text{
     padding: 0 1rem;
 }
-
 .close-details{
     font-size: 2rem;
     text-align: right;
