delete favorite function

--- a/frontend/src/pages/Favorite.css
+++ b/frontend/src/pages/Favorite.css
@@ -1,7 +1,24 @@
-.favoritesPage .favoritesList{
-    margin-top: 2rem;
-    padding: 0px 1.5rem;
+
+.favoritesPage .favoritesWrap{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    margin-top: 4rem;
 }
+.favoritesPage .favoritesList{
+    padding: 0px 1.5rem;
+    padding-bottom: 1rem;
+    width: 100%;
+}
+@media screen and (min-width: 1440px) {
+    .favoritesPage .favoritesList{
+        width: 30%;
+    }
+}
+.favoritesPage .favoritesList:nth-of-type(odd){
+    background-color: #2e2929;
+}
+
 .favoriteItem{
     margin: 1rem 0px;
     display: flex;
@@ -16,4 +33,16 @@
 }
 .favoriteName{
     max-width: 160px;
+}
+
+.actions{
+    float: right;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.actions svg{
+    width: 25px;
+    height: 25px;
+    display: block;
 }
