--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -144,11 +144,11 @@ footer {
   border-radius: 30px 30px 0 0;
   z-index: 101;
 }
-@media screen and (min-width: 900px) {
+/* @media screen and (min-width: 900px) {
   footer {
     display: none;
   }
-}
+} */
 footer svg {
   width: 25px;
   height: 25px;
