--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -148,9 +148,9 @@ footer {
   width: 100vw;
   border-radius: 30px 30px 0 0;
   z-index: 101;
-  @media screen and (min-width: 900px) {
+/*   @media screen and (min-width: 900px) {
     display: none;
-  }
+  } */
   svg{
     width: 25px;
     height: 25px;
