--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,9 +1,4 @@
-/*GLOBAL STYLES*/
-/*FONT*/
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
-/*COLOR PALETTE*/
-html,
-body {
+html, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -29,13 +24,13 @@ body.disliked-movie {
 
 .app {
   margin-bottom: 6rem;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 20px;
 }
 
-h1,
-h2,
-h3,
-p,
-span {
+h1, h2, h3, p, span {
   color: #f3f5f9;
 }
 
@@ -48,7 +43,7 @@ h1 {
 }
 
 h1#logo {
-  position: fixed;
+  position: center;
   z-index: 99;
   width: 100%;
 }
@@ -83,6 +78,7 @@ button {
   padding: 8px;
   font-weight: bold;
 }
+
 button:focus {
   background-color: #e05a47;
   color: #f3f5f9;
@@ -98,9 +94,8 @@ button:focus {
 }
 
 #intro {
-  position: fixed;
+  position: center;
   height: 100vh;
-  width: 100vw;
   background: linear-gradient(180deg, #e05a47, #e16959);
   background-color: #e05a47;
   z-index: 999;
@@ -118,7 +113,10 @@ button:focus {
   display: flex;
   flex-flow: column wrap;
   gap: 1rem;
+  max-width: 400px;
+  margin: 0 auto;
 }
+
 .login input {
   border: none;
   padding: 8px;
@@ -130,35 +128,44 @@ button:focus {
     visibility: none;
   }
 }
+
 @keyframes logo {
   to {
     transform: rotate(360deg) scale(1);
   }
 }
+
 footer {
   height: 65px;
   background: #e05a47;
   position: fixed;
   bottom: 0;
-  width: 100vw;
+  left: 0;
+  right: 0;
+  width: 100%;
   border-radius: 30px 30px 0 0;
   z-index: 101;
 }
-/* @media screen and (min-width: 900px) {
-  footer {
-    display: none;
-  }
-} */
-footer svg {
-  width: 25px;
-  height: 25px;
-  display: block;
-}
+
 footer div {
   padding: 25px 0;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-/*# sourceMappingURL=styles.css.map */
+footer svg {
+  width: 25px;
+  height: 25px;
+  display: block;
+}
+
+footer div span {
+  display: inline-block;
+}
+
+footer div span.active > svg path {
+  fill: #171515;
+}
