--- a/frontend/src/components/Details.css
+++ b/frontend/src/components/Details.css
@@ -1,54 +1,64 @@
-.modal-details{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #171515;
-    z-index: 99;
-    padding-top: 2rem;
-    overflow-y: scroll;
-    opacity: 0;
-    transform: translateY(100%);
-    animation: showUp 500ms ease-in-out forwards;
+.modal-details {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #171515;
+  z-index: 99;
+  padding-top: 2rem;
+  overflow-y: scroll;
+  opacity: 0;
+  transform: translateY(100%);
+  animation: showUp 500ms ease-in-out forwards;
 }
-.modal-details.hide{
-        animation: hideDown 500ms ease-in-out forwards;
+.modal-details.hide {
+  animation: hideDown 500ms ease-in-out forwards;
 }
 
 @keyframes showUp {
-    100%{
-        opacity: 1;
-        transform: translateY(0%);
-    }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
 }
 @keyframes hideDown {
-    0% {
-        opacity: 1;
-        transform: translateY(0%);
-    }
+  0% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
 
-    100% {
-        opacity: 0;
-        transform: translateY(100%);
-    }
+  100% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
 }
 .modal-details * {
-    color: #fff;
+  color: #fff;
 }
 
 /* .modal-details-content{
     padding: 0 1rem;
 } */
 
-.modal-details-video-container{
-    position: relative;
-    width: 100%;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio (56.25% is 9/16) */
-    height: 0;
-    overflow: hidden;
+.modal-details-video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio (56.25% is 9/16) */
+  height: 0;
+  overflow: hidden;
 }
-.modal-details-video{
+@media screen and (min-width: 900px) {
+  .modal-details-video-container {
+    padding-bottom: 26.25% !important;
+  }
+}
+@media screen and (max-width: 900px) {
+  .space-bottom {
+    height: 20vh;
+  }
+}
+.modal-details-video {
   position: absolute;
   top: 0;
   left: 0;
@@ -57,56 +67,57 @@
   border: 0;
 }
 .modal-details-img {
-    max-height: 200px;
-    width: 100%;
-    object-fit: cover;
-    display: block;
-    margin: 2rem auto;
+  max-height: 200px;
+  width: 100%;
+  object-fit: cover;
+  display: block;
+  margin: 2rem auto;
 }
-.genres{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 1.5rem;
+.genres {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1.5rem;
 }
-.modal-details-text{
-    padding: 0 1rem;
+/* .modal-details-text {
+  padding: 0 1rem;
+} */
+.providers ul {
+  list-style-type: none;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 2rem;
+  padding: 0;
 }
-.providers ul{
-    list-style-type: none;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 2rem;
-    padding: 0;
-}
-.close-details{
-    font-size: 2rem;
-    text-align: left;
-    margin-left: 1rem;
+.close-details {
+  font-size: 2rem;
+  text-align: left;
+  margin-left: 1rem;
+  cursor: pointer;
 }
 
 .create-watchparty {
-    margin-top: 20px;
-    text-align: center;
-  }
-  
-  .create-watchparty button {
-    padding: 10px 20px;
-    background-color: #e05a47;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    font-size: 16px;
-  }
-  
-  .create-watchparty button:hover {
-    background-color: #ff4500;
-  }
+  margin-top: 20px;
+  text-align: center;
+}
+
+.create-watchparty button {
+  padding: 10px 20px;
+  background-color: #e05a47;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  font-size: 16px;
+}
+
+.create-watchparty button:hover {
+  opacity: 0.85;
+}
