--- a/frontend/src/components/FilmCard.css
+++ b/frontend/src/components/FilmCard.css
@@ -9,6 +9,7 @@
     border-radius: 15px;
     pointer-events: all; */
     position: absolute;
+    margin-top: 1rem;
     width: 300px;
     height: 450px;
     border-radius: 15px;
