--- a/frontend/src/components/SwipeComponent.css
+++ b/frontend/src/components/SwipeComponent.css
@@ -30,7 +30,7 @@
 }
 
 .swipe-page {
-  padding: 4rem 2.35rem;
+  padding: 2rem 2.35rem;
   max-width: 1200px; /* Ändern von 1920px zu 1200px */
   margin: 0 auto;
   position: relative;
@@ -54,10 +54,12 @@
 }
 
 .swipe-thumbs {
-  margin: 1rem 0;
+  margin: 1rem auto;
   /* margin-bottom: 4rem; */
   display: flex;
   justify-content: space-between;
+  position: relative;
+  max-width: 350px;
 }
 @media screen and (min-width: 750px) {
   .swipe-thumbs {
@@ -66,6 +68,15 @@
 }
 .swipe-thumbs span {
   font-size: 3rem;
+  position: absolute;
+  z-index: 12;
+  bottom: -1rem;
+}
+.swipe-thumbs span:nth-of-type(1){
+  left: 1.25rem;
+}
+.swipe-thumbs span:nth-of-type(2){
+  right: 1.25rem;
 }
 
 /* New Round */
