--- a/frontend/src/pages/Favorite.css
+++ b/frontend/src/pages/Favorite.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   margin-top: 4rem;
 }
 .favoritesPage .favoritesList {
