--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -46,7 +46,7 @@ h1 {
   font-size: 2.5rem;
   font-weight: 800;
   text-align: center;
-  margin: 0;
+  margin: 0 0 1.5rem 0;
   padding-top: 15px;
 }
 
