--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -80,7 +80,7 @@ a {
 }
 
 button {
-  padding: 10px;
+  padding: 14px;
   background-color: #e05a47;
   color: white;
   border: none;
@@ -105,8 +105,7 @@ button:hover {
   position: fixed;
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(180deg, #e05a47, #e16959);
-  background-color: #e05a47;
+  background: #171515;
   z-index: 999;
   text-align: center;
   display: grid;
@@ -128,7 +127,7 @@ button:hover {
 
 .login input {
   border: none;
-  padding: 8px;
+  padding: 14px;
 }
 
 @keyframes fadeOut {
