--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -35,10 +35,9 @@ body.disliked-movie {
 
 .app {
   margin-bottom: 6rem;
-  /*max-width: 1200px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 20px;*/
 }
 
 h1,
