--- a/frontend/src/components/Chat.css
+++ b/frontend/src/components/Chat.css
@@ -20,9 +20,14 @@
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 5px;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
     justify-content: space-between;
     align-items: center;
+  }
+  .chat-message span{
+    white-space: nowrap;
+    overflow: scroll;
   }
   
   .chat-timestamp {
