--- a/frontend/src/components/WatchPartyDetails.css
+++ b/frontend/src/components/WatchPartyDetails.css
@@ -61,7 +61,7 @@
   margin-top: 15px;
   padding: 20px;
   background-color: #444;
-  border: 1px solid #e05a47;
+  /*border: 1px solid #e05a47;*/
   text-align: center;
 }
 
@@ -109,7 +109,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
   z-index: 1000;
