--- a/frontend/src/pages/Favorite.css
+++ b/frontend/src/pages/Favorite.css
@@ -32,6 +32,9 @@
   border-radius: 100%;
   object-fit: cover;
 }
+.favoriteName{
+  font-size: 1.1rem;
+}
 @media screen and (max-width:900px) {
   .favoriteName {
     max-width: 200px;
