--- a/frontend/src/pages/Favorite.css
+++ b/frontend/src/pages/Favorite.css
@@ -1,3 +1,8 @@
+.header-icon {
+  max-width: 40px;
+  display: block;
+  margin: 0 auto;
+}
 .favoritesPage .favoritesWrap {
   display: flex;
   flex-flow: row wrap;
@@ -32,13 +37,13 @@
   border-radius: 100%;
   object-fit: cover;
 }
-.favoriteName{
+.favoriteName {
   font-size: 1.1rem;
 }
-@media screen and (max-width:900px) {
+@media screen and (max-width: 900px) {
   .favoriteName {
     max-width: 200px;
-  } 
+  }
 }
 
 .actions {
