--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -57,6 +57,10 @@ h1 {
   padding-top: 15px;
 }
 
+.profile h2{
+  text-align: center;
+}
+
 h1#logo {
   position: center;
   z-index: 99;
@@ -165,6 +169,11 @@ footer {
   border-radius: 30px 30px 0 0;
   z-index: 101;
 }
+@media screen and (min-width: 900px) {
+  footer{
+    background: transparent;
+  }
+}
 
 footer div {
   padding: 25px 0;
@@ -187,6 +196,11 @@ footer div span {
 
 footer div span.active > svg path {
   fill: #171515;
+}
+@media screen and (min-width: 900px) {
+  footer div span.active > svg path {
+    fill: #e05a47 !important;
+  }
 }
 
 span{
