--- a/frontend/src/components/WatchPartyDetails.css
+++ b/frontend/src/components/WatchPartyDetails.css
@@ -7,6 +7,11 @@
     display: flex;
     justify-content: center;
     gap: 2rem;
+    margin-bottom: 6rem;
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 20px;
   }
 }
 
